hidden scrollbar fix

--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,11 @@ body {
   border-radius: 0.9rem;
   overflow: auto;
   position: relative;
+  scrollbar-width: none;
+}
+
+.box::-webkit-scrollbar {
+  display: none;
 }
 
 .loader {
